ACP-4149: Fix for local ACP setup in DMS (#9151)
ACP-4149 [DMS] Algolia search in Yves does not work for a new store

--- a/config/install/docker.acp.dev.yml
+++ b/config/install/docker.acp.dev.yml
@@ -166,6 +166,9 @@ sections:
         external-init-storages-per-region:
             command: 'bash acp-toolbox/bin/commands/external-region-install.sh -r docker -s init-storages-per-region'
 
+        queue-setup:
+            command: 'bash acp-toolbox/bin/commands/internal-region-console.sh queue:setup'
+
         propel-copy-schema:
             command: 'bash acp-toolbox/bin/commands/internal-region-console.sh propel:schema:copy'
 
