--- a/deploy.acp-dev.franken.mb2.yml
+++ b/deploy.acp-dev.franken.mb2.yml
@@ -1,6 +1,6 @@
 version: '0.1'
 
-namespace: spryker
+namespace: spryker-acp
 tag: 'dev'
 
 environment: docker.acp.dev
@@ -81,7 +81,7 @@ regions:
                         namespace: 2
                     search:
                         namespace: at_search
-    app-store-suite:
+    GLOBAL:
         services:
             database:
                 database: app-store-suite-docker
@@ -96,7 +96,7 @@ regions:
                         namespace: 8
                     search:
                         namespace: app-store-suite-search
-    registry-service:
+    REGISTRY:
         services:
             database:
                 database: registry-service-docker
@@ -190,17 +190,8 @@ groups:
                     backend-gateway.at.spryker.local:
                         store: AT
                         primal: true
-            backend_api_eu:
-                application: zed
-                endpoints:
-                    backend-api.de.spryker.local:
-                        store: DE
-                        entry-point: BackendApi
-                    backend-api.at.spryker.local:
-                        store: AT
-                        entry-point: BackendApi
-    app-store-suite:
-        region: app-store-suite
+    GLOBAL:
+        region: GLOBAL
         applications:
             app_store_suite_zed:
                 application: zed
@@ -218,8 +209,8 @@ groups:
                     glue-backend.apps.spryker.local:
                         entry-point: Acp/AppsGlue
                         store: GLOBAL
-    registry-service:
-        region: registry-service
+    REGISTRY:
+        region: REGISTRY
         applications:
             registry_service_backoffice:
                 application: zed
