--- a/buddy.yml
+++ b/buddy.yml
@@ -1868,7 +1868,7 @@
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
 
             # Initial Test Run
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.ui.suite -output output.xml ."'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -include group_two -d results -s robotframework.tests.ui.suite ."'
 
             # Check for Failed Tests
             - '
@@ -1884,19 +1884,15 @@
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
-                    --exclude skip-due-to-issueORskip-due-to-refactoring \
-                    -d rerun_results \
-                    -s robotframework.tests.api.suite \
-                    --output rerun.xml \
+                    -d results/rerun \
+                    --runemptysuite \
                     --rerunfailed results/output.xml \
-                    ."
+                    -output rerun.xml \
+                    -s robotframework.tests.ui.suite ."
 
                   # Combine Results
                   .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
-                    --output final_output.xml \
-                    --merge \
-                    results/output.xml \
-                    rerun_results/rerun.xml"
+                  -d results --merge results/output.xml results/rerun/rerun.xml"
 
                   # Copy final reports to results directory
                   cp rerun_results/* results/
