--- a/buddy.yml
+++ b/buddy.yml
@@ -1868,12 +1868,13 @@
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
 
             # Initial Test Run
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -include group_two -d results -s robotframework.tests.ui.suite ."'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite v headless:true -v ignore_console:false -v docker:True -v dms:true v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring -include group_two -s \"*\".tests.ui.suite ."'
+            - 'touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
             - '
                 TEST_EXIST_CODE=\$?
-                if [ \$TEST_EXIST_CODE ne 0 ]; then
+                if [ \$TEST_EXIST_CODE -ne 0 ]; then
                   echo "Tests failed. Re-running failed tests."
 
                   # Re-run Failed Tests
