--- a/buddy.yml
+++ b/buddy.yml
@@ -1832,15 +1832,12 @@
         instance_type: 'GENERAL_MEDIUM'
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI'
-  events:
-      - type: 'PUSH'
-        refs:
-            - 'refs/pull/*'
-            - 'refs/heads/master'
-#  trigger_conditions:
-#      - trigger_condition: 'VAR_IS'
-#        trigger_variable_value: 'run-ui-tests'
-#        trigger_variable_key: 'BUDDY_RUN_PR_LABELS'
+  type: "PULL_REQUEST"
+  events: "labeled"
+  trigger_conditions:
+      - trigger_condition: 'VAR_IS'
+        trigger_variable_value: 'run-ui-tests'
+        trigger_variable_key: 'BUDDY_RUN_PR_LABELS'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1868,8 +1865,8 @@
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
 
             # Initial Test Run
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite v headless:true -v ignore_console:false -v docker:True -v dms:true v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring -include group_two -s \"*\".tests.ui.suite ."'
-            - 'touch results/time.txt && echo $(date) > results/time.txt'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite v headless:true -v ignore_console:false -v docker:True -v dms:true v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring -s \"*\".tests.ui.suite ."'
+            - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
             - '
