--- a/buddy.yml
+++ b/buddy.yml
@@ -1835,7 +1835,10 @@
   events:
     - type: "PULL_REQUEST"
       events:
+          - "reopened"
           - "labeled"
+          - "opened"
+          - "synchronize"
   trigger_conditions:
       - trigger_condition: 'VAR_IS'
         trigger_variable_value: 'run-ui-tests'
