--- a/buddy.yml
+++ b/buddy.yml
@@ -1833,12 +1833,9 @@
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI'
   events:
-    - type: "PULL_REQUEST"
-      events:
-          - "reopened"
-          - "labeled"
-          - "opened"
-          - "synchronize"
+    - type: "PUSH"
+#      events:
+#          - "labeled"
   trigger_conditions:
       - trigger_condition: 'VAR_IS'
         trigger_variable_value: 'run-ui-tests'
