FRW-8899 [WIP] Adjustments for tests

--- a/buddy.yml
+++ b/buddy.yml
@@ -1835,7 +1835,10 @@
   events:
     - type: "PUSH"
       events:
+          - "reopened"
           - "labeled"
+          - "opened"
+          - "synchronize"
       branches:
           - "*"
   trigger_conditions:
