FRW-8899 [WIP] Adjustments for tests

--- a/buddy.yml
+++ b/buddy.yml
@@ -1831,7 +1831,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI'
+- pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI / Group One'
   events:
     - type: "PULL_REQUEST"
       events:
@@ -1873,6 +1873,225 @@
 
             # Initial Tests Run
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_one -s \"*\".tests.ui.suite ."'
+            - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
+
+            # Check for Failed Tests
+            - '
+                TEST_EXIST_CODE=\$?
+                if [ "$TEST_EXIST_CODE" -ne 0 ]; then
+                  echo "Tests failed. Re-running failed tests."
+
+                  # Re-run Failed Tests
+                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
+                    -v env:ui_suite \
+                    -v docker:True \
+                    -v dms:true \
+                    -v glue_env:http://glue.eu.spryker.local \
+                    -v bapi_env:http://glue-backend.eu.spryker.local \
+                    -v sapi_env:http://glue-storefront.eu.spryker.local \
+                    -d results/rerun \
+                    --runemptysuite \
+                    --rerunfailed results/output.xml \
+                    -output rerun.xml \
+                    -s robotframework.tests.ui.suite ."
+
+                  # Combine Results
+                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
+                  -d results --merge results/output.xml results/rerun/rerun.xml"
+
+                  # Copy final reports to results directory
+                  cp rerun_results/* results/
+                else
+                  echo "All tests passed on the first run."
+                fi'
+
+            # Upload Results to AWS S3
+            - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
+            - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
+            - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
+            - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_chunksize 16MB'
+            - 'export AWS_ACCESS_KEY_ID=$AWS_S3_ACCESS_KEY_ID'
+            - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
+            - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
+            - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/dms-on/suite-nonsplit-robot-ui-ci/$BUDDY_EXECUTION_HASH/PHP8.3MariaDBRobot/ --recursive --expires "$(date -d ''+7 days'' --utc +''%Y-%m-%dT%H:%M:%SZ'')"'
+            - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit-robot-ui-ci/${BUDDY_EXECUTION_HASH}/PHP8.3MariaDBRobot/log.html"'
+            - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
+            - '.ci/snippet/FINISH'
+        run_next_parallel: true
+        variables:
+            - key: 'SPRYKER_PLATFORM_IMAGE'
+              value: 'spryker/php:8.3'
+              type: 'VAR'
+            - key: 'SPRYKER_CURRENT_REGION'
+              value: 'EU'
+              type: 'VAR'
+            - key: 'SPRYKER_DYNAMIC_STORE_MODE'
+              value: 'true'
+              type: 'VAR'
+            - key: 'TRAVIS'
+              value: '1'
+              type: 'VAR'
+        timeout: 12000
+        sync_paths:
+            - pipeline_path: '/'
+              vm_path: '/home/ubuntu/build'
+              direction: 'PIPELINE_TO_VM'
+        docker_layer_caching_scope: 'ACTION'
+        instance_type: 'GENERAL_MEDIUM'
+
+
+- pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI / Group Two'
+  events:
+      - type: "PULL_REQUEST"
+        events:
+            - "reopened"
+            - "labeled"
+            - "opened"
+            - "synchronize"
+        branches:
+            - "*"
+  trigger_conditions:
+      - trigger_condition: 'VAR_IS'
+        trigger_variable_value: 'run-ui-tests'
+        trigger_variable_key: 'BUDDY_RUN_PR_LABELS'
+  terminate_stale_runs: true
+  auto_clear_cache: true
+  fail_on_prepare_env_warning: true
+  concurrent_pipeline_runs: true
+  clone_depth: 1
+  resources: 'NANO'
+  actions:
+      - action: 'Install Composer'
+        type: 'BUILD'
+        docker_image_name: 'spryker/php'
+        docker_image_tag: '8.3'
+        execute_commands:
+            - '.ci/snippet/PREPARE'
+            - '.ci/snippet/REQUIRE composer config github-oauth.github.com ${GITHUB_TOKEN}'
+            - '.ci/snippet/REQUIRE composer install --optimize-autoloader --no-interaction --prefer-install=auto '
+            - '.ci/snippet/FINISH'
+        shell: 'BASH'
+      - action: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI'
+        type: 'NATIVE_BUILD_DOCKER_CLI'
+        commands:
+            - '.ci/snippet/PREPARE'
+            - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.api.mariadb.robot.yml'
+            - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
+            - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
+
+            # Initial Tests Run
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_two -s \"*\".tests.ui.suite ."'
+            - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
+
+            # Check for Failed Tests
+            - '
+                TEST_EXIST_CODE=\$?
+                if [ "$TEST_EXIST_CODE" -ne 0 ]; then
+                  echo "Tests failed. Re-running failed tests."
+
+                  # Re-run Failed Tests
+                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
+                    -v env:ui_suite \
+                    -v docker:True \
+                    -v dms:true \
+                    -v glue_env:http://glue.eu.spryker.local \
+                    -v bapi_env:http://glue-backend.eu.spryker.local \
+                    -v sapi_env:http://glue-storefront.eu.spryker.local \
+                    -d results/rerun \
+                    --runemptysuite \
+                    --rerunfailed results/output.xml \
+                    -output rerun.xml \
+                    -s robotframework.tests.ui.suite ."
+
+                  # Combine Results
+                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
+                  -d results --merge results/output.xml results/rerun/rerun.xml"
+
+                  # Copy final reports to results directory
+                  cp rerun_results/* results/
+                else
+                  echo "All tests passed on the first run."
+                fi'
+
+            # Upload Results to AWS S3
+            - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
+            - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
+            - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
+            - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_chunksize 16MB'
+            - 'export AWS_ACCESS_KEY_ID=$AWS_S3_ACCESS_KEY_ID'
+            - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
+            - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
+            - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/dms-on/suite-nonsplit-robot-ui-ci/$BUDDY_EXECUTION_HASH/PHP8.3MariaDBRobot/ --recursive --expires "$(date -d ''+7 days'' --utc +''%Y-%m-%dT%H:%M:%SZ'')"'
+            - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit-robot-ui-ci/${BUDDY_EXECUTION_HASH}/PHP8.3MariaDBRobot/log.html"'
+            - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
+            - '.ci/snippet/FINISH'
+        run_next_parallel: true
+        variables:
+            - key: 'SPRYKER_PLATFORM_IMAGE'
+              value: 'spryker/php:8.3'
+              type: 'VAR'
+            - key: 'SPRYKER_CURRENT_REGION'
+              value: 'EU'
+              type: 'VAR'
+            - key: 'SPRYKER_DYNAMIC_STORE_MODE'
+              value: 'true'
+              type: 'VAR'
+            - key: 'TRAVIS'
+              value: '1'
+              type: 'VAR'
+        timeout: 12000
+        sync_paths:
+            - pipeline_path: '/'
+              vm_path: '/home/ubuntu/build'
+              direction: 'PIPELINE_TO_VM'
+        docker_layer_caching_scope: 'ACTION'
+        instance_type: 'GENERAL_MEDIUM'
+
+- pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI / Group Three'
+  events:
+      - type: "PULL_REQUEST"
+        events:
+            - "reopened"
+            - "labeled"
+            - "opened"
+            - "synchronize"
+        branches:
+            - "*"
+  trigger_conditions:
+      - trigger_condition: 'VAR_IS'
+        trigger_variable_value: 'run-ui-tests'
+        trigger_variable_key: 'BUDDY_RUN_PR_LABELS'
+  terminate_stale_runs: true
+  auto_clear_cache: true
+  fail_on_prepare_env_warning: true
+  concurrent_pipeline_runs: true
+  clone_depth: 1
+  resources: 'NANO'
+  actions:
+      - action: 'Install Composer'
+        type: 'BUILD'
+        docker_image_name: 'spryker/php'
+        docker_image_tag: '8.3'
+        execute_commands:
+            - '.ci/snippet/PREPARE'
+            - '.ci/snippet/REQUIRE composer config github-oauth.github.com ${GITHUB_TOKEN}'
+            - '.ci/snippet/REQUIRE composer install --optimize-autoloader --no-interaction --prefer-install=auto '
+            - '.ci/snippet/FINISH'
+        shell: 'BASH'
+      - action: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI'
+        type: 'NATIVE_BUILD_DOCKER_CLI'
+        commands:
+            - '.ci/snippet/PREPARE'
+            - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.api.mariadb.robot.yml'
+            - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
+            - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
+
+            # Initial Tests Run
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_three -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
