--- a/composer.json
+++ b/composer.json
@@ -151,7 +151,7 @@
         "spryker-sdk/async-api": "^0.3.1",
         "spryker/profiler": "dev-master",
         "spryker/commerce-k6-performance-tests": "dev-master",
-        "spryker/cypress-tests": "dev-master"
+        "spryker/cypress-tests": "dev-feature/frw-8354-create-dms-acceptance-tests"
     },
     "autoload": {
         "psr-4": {
