--- a/buddy.yml
+++ b/buddy.yml
@@ -1876,8 +1876,8 @@
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
-            - '
-                TEST_EXIST_CODE=\$?
+            - |
+                TEST_EXIST_CODE=$?
                 if [ "$TEST_EXIST_CODE" -ne 0 ]; then
                   echo "Tests failed. Re-running failed tests."
 
@@ -1886,24 +1886,26 @@
                     -v env:ui_suite \
                     -v docker:True \
                     -v dms:true \
-                    -v glue_env:http://glue.eu.spryker.local \
-                    -v bapi_env:http://glue-backend.eu.spryker.local \
-                    -v sapi_env:http://glue-storefront.eu.spryker.local \
+                    -v glue_env=http://glue.eu.spryker.local \
+                    -v bapi_env=http://glue-backend.eu.spryker.local \
+                    -v sapi_env=http://glue-storefront.eu.spryker.local \
+                    -v yves_env=http://yves.eu.spryker.local \
+                    -v zed_env=http://backoffice.eu.spryker.local \
                     -d results/rerun \
                     --runemptysuite \
                     --rerunfailed results/output.xml \
                     -output rerun.xml \
-                    -s robotframework.tests.ui.suite ."
+                    -s \"*\".tests.ui.suite ."
 
                   # Combine Results
                   .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
-                  -d results --merge results/output.xml results/rerun/rerun.xml"
+                    -d results --merge results/output.xml results/rerun/rerun.xml"
 
                   # Copy final reports to results directory
                   cp rerun_results/* results/
                 else
                   echo "All tests passed on the first run."
-                fi'
+                fi
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -2091,7 +2093,7 @@
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
 
             # Initial Tests Run
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_three -s \"*\".tests.ui.suite ."'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_tree -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
