--- a/buddy.yml
+++ b/buddy.yml
@@ -1876,12 +1876,7 @@
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
-            - |
-                TEST_EXIST_CODE=$?
-                if [ "$TEST_EXIST_CODE" -ne 0 ]; then
-                  echo "Tests failed. Re-running failed tests."
-
-                  # Re-run Failed Tests
+            - '
                   .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
                     -v env:ui_suite \
                     -v docker:True \
@@ -1904,9 +1899,7 @@
 
                   # Copy final reports to results directory
                   cp rerun_results/* results/
-                else
-                  echo "All tests passed on the first run."
-                fi
+                '
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -2002,7 +1995,8 @@
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
-                    -v mp_root_env:http://mp.eu.spryker.local/ -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
+                    -v mp_root_env:http://mp.eu.spryker.local/
+                    -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
                     --runemptysuite \
                     --rerunfailed results/output.xml \
@@ -2112,7 +2106,8 @@
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
-                    -v mp_root_env:http://mp.eu.spryker.local/ -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
+                    -v mp_root_env:http://mp.eu.spryker.local/
+                    -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
                     --runemptysuite \
                     --rerunfailed results/output.xml \
