--- a/buddy.yml
+++ b/buddy.yml
@@ -1886,7 +1886,8 @@
                     -v sapi_env=http://glue-storefront.eu.spryker.local \
                     -v yves_env=http://yves.eu.spryker.local \
                     -v zed_env=http://backoffice.eu.spryker.local \
-                    -v mp_root_env:http://mp.eu.spryker.local/ -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
+                    -v mp_root_env:http://mp.eu.spryker.local/ \
+                    -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
                     --runemptysuite \
                     --rerunfailed results/output.xml \
@@ -1983,11 +1984,6 @@
 
             # Check for Failed Tests
             - '
-                TEST_EXIST_CODE=\$?
-                if [ "$TEST_EXIST_CODE" -ne 0 ]; then
-                  echo "Tests failed. Re-running failed tests."
-
-                  # Re-run Failed Tests
                   .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
                     -v env:ui_suite \
                     -v docker:True \
@@ -1995,7 +1991,7 @@
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
-                    -v mp_root_env:http://mp.eu.spryker.local/
+                    -v mp_root_env:http://mp.eu.spryker.local/ \
                     -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
                     --runemptysuite \
@@ -2008,10 +2004,7 @@
                   -d results --merge results/output.xml results/rerun/rerun.xml"
 
                   # Copy final reports to results directory
-                  cp rerun_results/* results/
-                else
-                  echo "All tests passed on the first run."
-                fi'
+                  cp rerun_results/* results/'
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -2093,20 +2086,14 @@
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
             # Check for Failed Tests
-            - '
-                TEST_EXIST_CODE=\$?
-                if [ "$TEST_EXIST_CODE" -ne 0 ]; then
-                  echo "Tests failed. Re-running failed tests."
-
-                  # Re-run Failed Tests
-                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
                     -v env:ui_suite \
                     -v docker:True \
                     -v dms:true \
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
-                    -v mp_root_env:http://mp.eu.spryker.local/
+                    -v mp_root_env:http://mp.eu.spryker.local/ \
                     -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
                     --runemptysuite \
@@ -2119,10 +2106,7 @@
                   -d results --merge results/output.xml results/rerun/rerun.xml"
 
                   # Copy final reports to results directory
-                  cp rerun_results/* results/
-                else
-                  echo "All tests passed on the first run."
-                fi'
+                  cp rerun_results/* results/'
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
