FRW-8899 [WIP] Adjustments for tests

--- a/buddy.yml
+++ b/buddy.yml
@@ -1881,11 +1881,11 @@
                     -v env:ui_suite \
                     -v docker:True \
                     -v dms:true \
-                    -v glue_env=http://glue.eu.spryker.local \
-                    -v bapi_env=http://glue-backend.eu.spryker.local \
-                    -v sapi_env=http://glue-storefront.eu.spryker.local \
-                    -v yves_env=http://yves.eu.spryker.local \
-                    -v zed_env=http://backoffice.eu.spryker.local \
+                    -v glue_env:http://glue.eu.spryker.local \
+                    -v bapi_env:http://glue-backend.eu.spryker.local \
+                    -v sapi_env:http://glue-storefront.eu.spryker.local \
+                    -v yves_env:http://yves.eu.spryker.local \
+                    -v zed_env:http://backoffice.eu.spryker.local \
                     -v mp_root_env:http://mp.eu.spryker.local/ \
                     -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
@@ -1991,6 +1991,8 @@
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
+                    -v yves_env:http://yves.eu.spryker.local \
+                    -v zed_env:http://backoffice.eu.spryker.local \
                     -v mp_root_env:http://mp.eu.spryker.local/ \
                     -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
@@ -2093,6 +2095,8 @@
                     -v glue_env:http://glue.eu.spryker.local \
                     -v bapi_env:http://glue-backend.eu.spryker.local \
                     -v sapi_env:http://glue-storefront.eu.spryker.local \
+                    -v yves_env:http://yves.eu.spryker.local \
+                    -v zed_env:http://backoffice.eu.spryker.local \
                     -v mp_root_env:http://mp.eu.spryker.local/ \
                     -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
                     -d results/rerun \
